import("//build/templates/rust.gni")
import("//librs/tests/linux_emulation_test/testcase.gni")

group("run_librs_linux_emulation") {
  testonly = true
  deps = [
    ":run_librs_linux_emulation_clock",
    ":run_librs_linux_emulation_mqueue",
    ":run_librs_linux_emulation_sched",
    ":run_librs_linux_emulation_time",

    # ":run_librs_linux_emulation_shell_example",
  ]
}

build_rust("librs_linux_emulation") {
  testonly = true
  crate_type = "staticlib"
  crate_name = "librs"
  sources = [ "//librs/src/lib.rs" ]
  deps = [
    "//external/vendor/spin-0.9.8:spin",
    "//kernel/header:blueos_header",
    "//kernel/scal:blueos_scal",
    "//libc",
  ]
  features = [ "linux_emulation" ]
  configs += [ "//build/boards/${board}:kernel_config" ]
  public_deps = board_deps
}

build_rust("librs_linux_emulation_shell_example") {
  testonly = true
  crate_type = "staticlib"
  crate_name = "librs_linux_emulation_shell_example"
  sources = [ "//librs/tests/linux_emulation_test/shell_example.rs" ]
  deps = [ "//librs/tests/linux_emulation_test:librs_linux_emulation" ]
  configs += [ "//build/boards/${board}:kernel_config" ]
}

librs_linux_emulation_case("clock") {
}
librs_linux_emulation_case("time") {
}
librs_linux_emulation_case("sched") {
}
librs_linux_emulation_case("mqueue") {
}

librs_linux_emulation_rs_case("shell_example") {
}
